examples/test/testpolicy2641.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2641
  namespace: namespace474
spec:
  podSelector:
    matchLabels:
      key12: value27
      key33: value38
      key16: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value47
          key16: value47
          key9: value18
      podSelector:
        matchLabels:
          key37: value46
          key32: value19
          key17: value42
